--- a/mushroom.ipynb
+++ b/mushroom.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOqeX3Y5SJYTNaPpzJbsmDF",
+      "authorship_tag": "ABX9TyNVW4q4k/B3xaCCQl8dQjqJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,15 +27,29 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## 1. Carga dos dados\n",
+        "Acessei UCI Machine Learning Repository, avancei algumas páginas e encontrei \"Mushroom\", um dataset que traz características de cogumelos e a indicação se é venenoso ou comestível.\n",
+        "\n",
+        "Fiz o download dos dados e subi para um repositório no git. O carregamento é feito pelo raw. A documentação trouxe o nome das 23 colunas e algumas informações sobre os dados.\n",
+        "\n",
+        "A seguir temos a leitura dos dados, a criação do csv e a exibição das primeiras 5 linhas:"
+      ],
+      "metadata": {
+        "id": "lE3lUP_filjk"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 325
         },
         "id": "Ltl8Y8OLaIYr",
-        "outputId": "a0352ce0-1d19-4141-f8c9-5bfa365c5000"
+        "outputId": "74a65bb1-423d-4d77-c6a5-a57c8ed92463"
       },
       "outputs": [
         {
@@ -81,7 +95,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-1c0b9580-48b6-41f2-9a55-93640fddd837\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-623c4823-b696-47db-8db3-e12b918f6c06\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -251,7 +265,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-1c0b9580-48b6-41f2-9a55-93640fddd837')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-623c4823-b696-47db-8db3-e12b918f6c06')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -303,12 +317,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-1c0b9580-48b6-41f2-9a55-93640fddd837 button.colab-df-convert');\n",
+              "        document.querySelector('#df-623c4823-b696-47db-8db3-e12b918f6c06 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-1c0b9580-48b6-41f2-9a55-93640fddd837');\n",
+              "        const element = document.querySelector('#df-623c4823-b696-47db-8db3-e12b918f6c06');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -328,8 +342,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-95db8da8-d45c-46b8-b145-d4cb50c9edab\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-95db8da8-d45c-46b8-b145-d4cb50c9edab')\"\n",
+              "    <div id=\"df-4e821055-8ca7-4485-8d5b-9341f8c0f775\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-4e821055-8ca7-4485-8d5b-9341f8c0f775')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -448,7 +462,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-95db8da8-d45c-46b8-b145-d4cb50c9edab button');\n",
+              "            document.querySelector('#df-4e821055-8ca7-4485-8d5b-9341f8c0f775 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -464,7 +478,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 1
+          "execution_count": 7
         }
       ],
       "source": [
@@ -506,23 +520,47 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# 2. Transformação de dados\n",
+        "O dataset Mushroom possui alguns dados faltantes na coluna \"stalk-root\". Uma escolha foi substituir \"?\" por \"unknown\" que passa a ser uma nova categoria."
+      ],
+      "metadata": {
+        "id": "4iTXj1o3jhI5"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Substituindo '?' por uma nova categoria\n",
-        "iris['stalk-root'] = iris['stalk-root'].replace('?', 'unknown')\n",
-        "X = iris.drop('classificacao', axis=1)\n",
-        "y = iris['classificacao']  # 'e' para edible e 'p' para poisonous\n"
+        "iris['stalk-root'] = iris['stalk-root'].replace('?', 'unknown')"
       ],
       "metadata": {
         "id": "zVTOTIewaMty"
       },
-      "execution_count": 2,
+      "execution_count": 8,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 3. Separação entre treino e teste (houldout)\n",
+        "\n",
+        "Primeiro fiz a separação na dimensão das linhas: X (dados) e y (Classificação).\n",
+        "\n",
+        "Depois, fiz a separação na dimensão das colunas: X_train (dados para treinamento), X_test (dados para teste), y_train (classificação para treinamento) e y_test (classificação para teste)"
+      ],
+      "metadata": {
+        "id": "YsWtoobAkXQy"
+      }
     },
     {
       "cell_type": "code",
       "source": [
         "from sklearn.model_selection import train_test_split\n",
+        "\n",
+        "X = iris.drop('classificacao', axis=1)\n",
+        "y = iris['classificacao']  # 'e' para edible e 'p' para poisonous\n",
         "\n",
         "X_train, X_test, y_train, y_test = train_test_split(\n",
         "    X, y, test_size=0.3, random_state=42, stratify=y\n",
@@ -531,29 +569,21 @@
       "metadata": {
         "id": "RLsbYrZLhf0z"
       },
-      "execution_count": 3,
+      "execution_count": 9,
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "from sklearn.preprocessing import OneHotEncoder\n",
-        "from sklearn.compose import ColumnTransformer\n",
+        "## 4. Modelagem\n",
         "\n",
-        "# Todas as colunas são categóricas\n",
-        "categorical_features = X.columns.tolist()\n",
+        "Como os dados são categóricos (letras, palavras) utilizei a técnica de One Hot Encoging para converter as variáveis em vetores binários.\n",
         "\n",
-        "preprocessor = ColumnTransformer(\n",
-        "    transformers=[\n",
-        "        ('cat', OneHotEncoder(handle_unknown='ignore'), categorical_features)\n",
-        "    ]\n",
-        ")\n"
+        "Depois passei para o treinamento dos modelos utilizando pipeline do sklearn, sem alterar nenhum parâmetro. O ajuste dos hiperparâmetros será feito na sequência e a análise dos resultados."
       ],
       "metadata": {
-        "id": "_2dASb0VhiBb"
-      },
-      "execution_count": 4,
-      "outputs": []
+        "id": "bZxcPoRxlEno"
+      }
     },
     {
       "cell_type": "code",
@@ -564,6 +594,18 @@
         "from sklearn.naive_bayes import GaussianNB\n",
         "from sklearn.svm import SVC\n",
         "from sklearn.preprocessing import StandardScaler\n",
+        "\n",
+        "from sklearn.preprocessing import OneHotEncoder\n",
+        "from sklearn.compose import ColumnTransformer\n",
+        "\n",
+        "# Todas as colunas são categóricas\n",
+        "categorical_features = X.columns.tolist()\n",
+        "\n",
+        "preprocessor = ColumnTransformer(\n",
+        "    transformers=[\n",
+        "        ('cat', OneHotEncoder(handle_unknown='ignore'), categorical_features)\n",
+        "    ]\n",
+        ")\n",
         "\n",
         "models = {\n",
         "    'KNN': KNeighborsClassifier(),\n",
@@ -579,6 +621,7 @@
         "            ('scaler', StandardScaler(with_mean=False)),\n",
         "            ('classifier', modelo)\n",
         "        ])\n",
+        "    # O GaussianNB não aceita sparse matrix (padrão do OneHotEncoder), então vamos configurar o OneHotEncoder para gerar uma saida densa.\n",
         "    elif nome == 'NaiveBayes':\n",
         "        preprocessor_dense = ColumnTransformer([\n",
         "            ('cat', OneHotEncoder(handle_unknown='ignore', sparse_output=False), categorical_features)\n",
@@ -587,6 +630,7 @@
         "            ('preprocessor', preprocessor_dense),\n",
         "            ('classifier', modelo)\n",
         "        ])\n",
+        "    # caso DecisionTree não utilizamos o processor.\n",
         "    else:\n",
         "        pipeline = Pipeline(steps=[\n",
         "            ('preprocessor', preprocessor),\n",
@@ -594,6 +638,7 @@
         "        ])\n",
         "\n",
         "    pipeline.fit(X_train, y_train)\n",
+        "    # mostrando a acurária\n",
         "    score = pipeline.score(X_test, y_test)\n",
         "    print(f\"{nome} - Acurácia: {score:.4f}\")\n",
         "\n"
@@ -603,9 +648,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jsukrNjQhluF",
-        "outputId": "0720d20f-a827-423e-a4e0-fe9a7783966a"
+        "outputId": "fe6072f9-718f-4d0e-b6f3-91e69b10e10c"
       },
-      "execution_count": 6,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -618,6 +663,151 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Se tudo rodou como deveria encontramos o seguite:\n",
+        "\n",
+        "> KNN - Acurácia: 0.9988\n",
+        ">\n",
+        "> DecisionTree - Acurácia: 1.0000\n",
+        ">\n",
+        "> NaiveBayes - Acurácia: 0.9512\n",
+        ">\n",
+        "> SVM - Acurácia: 0.9988\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "72JcCdcjnKYn"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 5 Otimização de hiperparâmetros\n",
+        "\n",
+        "### KNN\n",
+        "A acurácia do KNN inicialmente foi de 0.9988. Utilizando o GridSearchCV para variar os parâmetros, vou encontrar os melhores parâmetros e a acurárias."
+      ],
+      "metadata": {
+        "id": "2gstpQLFqfgs"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.model_selection import GridSearchCV\n",
+        "from sklearn.preprocessing import LabelEncoder\n",
+        "\n",
+        "# Transforma 'e' e 'p' para 0 e 1\n",
+        "label_encoder = LabelEncoder()\n",
+        "y_train_encoded = label_encoder.fit_transform(y_train)\n",
+        "y_test_encoded = label_encoder.fit_transform(y_test)\n",
+        "\n",
+        "pipeline_knn = Pipeline([\n",
+        "    ('preprocessor', preprocessor),\n",
+        "    ('scaler', StandardScaler(with_mean=False)),\n",
+        "    ('classifier', KNeighborsClassifier())\n",
+        "])\n",
+        "\n",
+        "param_grid_knn = {\n",
+        "    'classifier__n_neighbors': [3, 5, 7, 9],\n",
+        "    'classifier__weights': ['uniform', 'distance'],\n",
+        "    'classifier__metric': ['euclidean', 'manhattan']\n",
+        "}\n",
+        "\n",
+        "grid_knn = GridSearchCV(pipeline_knn, param_grid_knn, cv=5, scoring='accuracy')\n",
+        "grid_knn.fit(X_train, y_train_encoded)\n",
+        "y_pred_enc = grid_knn.predict(X_test)\n",
+        "y_pred = label_encoder.inverse_transform(y_pred_enc)\n",
+        "\n",
+        "print(\"Melhores parâmetros (KNN):\", grid_knn.best_params_)\n",
+        "print(\"Acurácia com melhores parâmetros:\", grid_knn.score(X_test, y_pred_enc))\n"
+      ],
+      "metadata": {
+        "id": "numrOtZzoJLE",
+        "outputId": "9af86a49-2013-45f9-c420-bec20b6d95b9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Melhores parâmetros (KNN): {'classifier__metric': 'euclidean', 'classifier__n_neighbors': 3, 'classifier__weights': 'uniform'}\n",
+            "Acurácia com melhores parâmetros: 1.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Nessa configuração do KNN ('classifier__metric': 'euclidean', 'classifier__n_neighbors': 3, 'classifier__weights': 'uniform') a acurácia chegou em 1.0.\n",
+        "\n",
+        "### Árvore de Classificação\n",
+        "\n",
+        "Utilizando esse algoritmo já obtemos acurácia 1. Inicialmente pensei que não haveria necessidade de alterar os parâmetros, porém considerando que possa ter havido overfiting, utilizei o GridSearch para avaliar o desempenho:\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "iRNddvYnopSM"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.tree import DecisionTreeClassifier\n",
+        "from sklearn.model_selection import GridSearchCV\n",
+        "\n",
+        "pipeline_dt = Pipeline([\n",
+        "    ('preprocessor', preprocessor),\n",
+        "    ('classifier', DecisionTreeClassifier(random_state=42))\n",
+        "])\n",
+        "\n",
+        "param_grid_dt = {\n",
+        "    'classifier__max_depth': [3, 5, 10, None],\n",
+        "    'classifier__min_samples_split': [2, 5, 10, 20],\n",
+        "    'classifier__criterion': ['gini', 'entropy']\n",
+        "}\n",
+        "\n",
+        "grid_dt = GridSearchCV(pipeline_dt, param_grid_dt, cv=5, scoring='accuracy')\n",
+        "grid_dt.fit(X_train, y_train)\n",
+        "\n",
+        "print(\"Melhores parâmetros (Árvore):\", grid_dt.best_params_)\n",
+        "print(\"Acurácia com melhores parâmetros:\", grid_dt.score(X_test, y_test))\n"
+      ],
+      "metadata": {
+        "id": "NKLK1I2erwU6",
+        "outputId": "60950204-0c8f-4f84-b8f9-a8dd890d44d2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Melhores parâmetros (Árvore): {'classifier__criterion': 'gini', 'classifier__max_depth': 5, 'classifier__min_samples_split': 2}\n",
+            "Acurácia com melhores parâmetros: 0.9987694831829368\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Vemos aqui"
+      ],
+      "metadata": {
+        "id": "nMeamiCkx3gs"
+      }
     }
   ]
 }
