--- a/mushroom.ipynb
+++ b/mushroom.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNVW4q4k/B3xaCCQl8dQjqJ",
+      "authorship_tag": "ABX9TyN9NqZ8DXcq0igEKPaDUgAt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,14 +42,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 34,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 325
         },
         "id": "Ltl8Y8OLaIYr",
-        "outputId": "74a65bb1-423d-4d77-c6a5-a57c8ed92463"
+        "outputId": "91cdff80-8cb5-4668-8737-0b8a811602d1"
       },
       "outputs": [
         {
@@ -95,7 +95,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-623c4823-b696-47db-8db3-e12b918f6c06\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-464f0dbb-612c-4848-989b-ed306413a99b\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -265,7 +265,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-623c4823-b696-47db-8db3-e12b918f6c06')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-464f0dbb-612c-4848-989b-ed306413a99b')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -317,12 +317,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-623c4823-b696-47db-8db3-e12b918f6c06 button.colab-df-convert');\n",
+              "        document.querySelector('#df-464f0dbb-612c-4848-989b-ed306413a99b button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-623c4823-b696-47db-8db3-e12b918f6c06');\n",
+              "        const element = document.querySelector('#df-464f0dbb-612c-4848-989b-ed306413a99b');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -342,8 +342,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-4e821055-8ca7-4485-8d5b-9341f8c0f775\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-4e821055-8ca7-4485-8d5b-9341f8c0f775')\"\n",
+              "    <div id=\"df-a212ec33-2b30-40c8-8823-a6996988e803\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-a212ec33-2b30-40c8-8823-a6996988e803')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -462,7 +462,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-4e821055-8ca7-4485-8d5b-9341f8c0f775 button');\n",
+              "            document.querySelector('#df-a212ec33-2b30-40c8-8823-a6996988e803 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -478,7 +478,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 34
         }
       ],
       "source": [
@@ -538,7 +538,7 @@
       "metadata": {
         "id": "zVTOTIewaMty"
       },
-      "execution_count": 8,
+      "execution_count": 35,
       "outputs": []
     },
     {
@@ -569,7 +569,7 @@
       "metadata": {
         "id": "RLsbYrZLhf0z"
       },
-      "execution_count": 9,
+      "execution_count": 36,
       "outputs": []
     },
     {
@@ -621,7 +621,7 @@
         "            ('scaler', StandardScaler(with_mean=False)),\n",
         "            ('classifier', modelo)\n",
         "        ])\n",
-        "    # O GaussianNB não aceita sparse matrix (padrão do OneHotEncoder), então vamos configurar o OneHotEncoder para gerar uma saida densa.\n",
+        "    # O GaussianNB não aceita sparse matrix (padrão do OneHotEncoder), então precisei configurar o OneHotEncoder para gerar uma saida densa.\n",
         "    elif nome == 'NaiveBayes':\n",
         "        preprocessor_dense = ColumnTransformer([\n",
         "            ('cat', OneHotEncoder(handle_unknown='ignore', sparse_output=False), categorical_features)\n",
@@ -648,9 +648,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jsukrNjQhluF",
-        "outputId": "fe6072f9-718f-4d0e-b6f3-91e69b10e10c"
+        "outputId": "fdd38058-af11-4fb5-c651-cc9cc2d4e686"
       },
-      "execution_count": 11,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
@@ -686,12 +686,20 @@
       "cell_type": "markdown",
       "source": [
         "## 5 Otimização de hiperparâmetros\n",
-        "\n",
-        "### KNN\n",
-        "A acurácia do KNN inicialmente foi de 0.9988. Utilizando o GridSearchCV para variar os parâmetros, vou encontrar os melhores parâmetros e a acurárias."
+        "\n"
       ],
       "metadata": {
         "id": "2gstpQLFqfgs"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### KNN\n",
+        "A acurácia do KNN inicialmente foi de 0.9988. Utilizando o GridSearchCV para variar os parâmetros, quero encontrar os melhores parâmetros e a acurárias."
+      ],
+      "metadata": {
+        "id": "6yepzkLR4mqK"
       }
     },
     {
@@ -730,9 +738,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "numrOtZzoJLE",
-        "outputId": "9af86a49-2013-45f9-c420-bec20b6d95b9"
+        "outputId": "487e7cc1-f54b-4748-e7b5-14e57e0e03c2"
       },
-      "execution_count": 17,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "stream",
@@ -747,15 +755,21 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Nessa configuração do KNN ('classifier__metric': 'euclidean', 'classifier__n_neighbors': 3, 'classifier__weights': 'uniform') a acurácia chegou em 1.0.\n",
-        "\n",
-        "### Árvore de Classificação\n",
-        "\n",
-        "Utilizando esse algoritmo já obtemos acurácia 1. Inicialmente pensei que não haveria necessidade de alterar os parâmetros, porém considerando que possa ter havido overfiting, utilizei o GridSearch para avaliar o desempenho:\n",
-        "\n"
+        "Nessa configuração do KNN ('classifier__metric': 'euclidean', 'classifier__n_neighbors': 3, 'classifier__weights': 'uniform') a acurácia chegou em 1.0. Esse é um ótimo indicador!"
       ],
       "metadata": {
         "id": "iRNddvYnopSM"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Árvore de Classificação\n",
+        "\n",
+        "Utilizando esse algoritmo já obtemos acurácia 1. Inicialmente, pensei que não haveria necessidade de alterar os parâmetros, porém considerando que possa ter havido overfiting, utilizei o GridSearch para avaliar o desempenho:"
+      ],
+      "metadata": {
+        "id": "YPkaepvx0uK6"
       }
     },
     {
@@ -786,9 +800,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NKLK1I2erwU6",
-        "outputId": "60950204-0c8f-4f84-b8f9-a8dd890d44d2"
+        "outputId": "17f6f808-5368-421a-a69b-08eb580877f6"
       },
-      "execution_count": 22,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "stream",
@@ -803,11 +817,227 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Vemos aqui"
+        "Vemos aqui que o modelo inicial realmente parece overfittado. Como esse valor de acurácia pós variação dos hiperparâmetros é o menor de todos, esse algoritmo passa a ser um candidato a descarte."
       ],
       "metadata": {
         "id": "nMeamiCkx3gs"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Naive Bayes\n",
+        "\n",
+        "O modelo original (`GaussianNB`) obteve acurácia de 0.9512.\n",
+        "Aqui vou usar o MultinomialNB."
+      ],
+      "metadata": {
+        "id": "XaIPExCY2R2K"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.naive_bayes import MultinomialNB\n",
+        "\n",
+        "preprocessor_dense = ColumnTransformer([\n",
+        "    ('cat', OneHotEncoder(handle_unknown='ignore', sparse_output=False), categorical_features)\n",
+        "], remainder='passthrough')\n",
+        "\n",
+        "# Pipeline com Naive Bayes\n",
+        "pipeline = Pipeline(steps=[\n",
+        "    ('preprocessor', preprocessor_dense),\n",
+        "    ('classifier', MultinomialNB())\n",
+        "])\n",
+        "\n",
+        "# Grade de hiperparâmetros\n",
+        "param_grid = {\n",
+        "    'classifier__alpha': [0.1, 0.5, 1.0, 2.0],  # Alpha é o parâmetro de suavização\n",
+        "    'classifier__fit_prior': [True, False]\n",
+        "}\n",
+        "\n",
+        "# GridSearchCV\n",
+        "grid_search = GridSearchCV(pipeline, param_grid, cv=5, scoring='accuracy')\n",
+        "grid_search.fit(X, y)\n",
+        "\n",
+        "# Resultados\n",
+        "print(f\"Melhores parâmetros: {grid_search.best_params_}\")\n",
+        "print(f\"Acurácia: {grid_search.best_score_:.4f}\")"
+      ],
+      "metadata": {
+        "id": "DAKoaQCM21nj",
+        "outputId": "7a1ecb82-2a76-4d5a-9741-89fa85df29c6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Melhores parâmetros: {'classifier__alpha': 0.1, 'classifier__fit_prior': False}\n",
+            "Acurácia: 0.8375\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Pelo visto, a acurácia diminui utilizando MultinomialNB e possibilitando mudar os parâmetros de alpha e fit_prior. Esse é um modelo que definitivamente é candidato a descarte."
+      ],
+      "metadata": {
+        "id": "MEG9otkI34s6"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### SVM\n",
+        "\n",
+        "O modelo original obteve acurácia de 0.9988. USadno GridSearchCV, vou variar os seguintes parâmetros:\n",
+        "\n",
+        "- C: parâmetro de penalidade de margem (valores menores toleram mais erros).\n",
+        "- kernel: tipo de kernel ('linear', 'rbf', 'poly', 'sigmoid').\n",
+        "- gamma: controla a influência dos exemplos de treino (apenas para 'rbf', 'poly', 'sigmoid')."
+      ],
+      "metadata": {
+        "id": "_enqt4AA4xuq"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "preprocessor = ColumnTransformer(\n",
+        "    transformers=[\n",
+        "        ('cat', OneHotEncoder(handle_unknown='ignore'), categorical_features)\n",
+        "    ]\n",
+        ")\n",
+        "\n",
+        "pipeline = Pipeline(steps=[\n",
+        "    ('preprocessor', preprocessor),\n",
+        "    ('scaler', StandardScaler(with_mean=False)),  # necessário por causa do OneHot\n",
+        "    ('classifier', SVC())\n",
+        "])\n",
+        "\n",
+        "# Grid de hiperparâmetros\n",
+        "param_grid = {\n",
+        "    'classifier__C': [0.1, 1, 10],\n",
+        "    'classifier__kernel': ['linear', 'rbf'],\n",
+        "    'classifier__gamma': ['scale', 'auto']  # só afeta kernel 'rbf'\n",
+        "}\n",
+        "\n",
+        "# GridSearchCV\n",
+        "grid_search = GridSearchCV(pipeline, param_grid, cv=5, scoring='accuracy')\n",
+        "grid_search.fit(X_train, y_train)\n",
+        "\n",
+        "# Resultados\n",
+        "print(f\"Melhores parâmetros (SVM): {grid_search.best_params_}\")\n",
+        "print(f\"Acurácia com melhores parâmetros: {grid_search.best_score_:.4f}\")"
+      ],
+      "metadata": {
+        "id": "VHXshmPQ5bcS",
+        "outputId": "dd93f020-8811-4fd9-cf88-8d570a9488cf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Melhores parâmetros (SVM): {'classifier__C': 0.1, 'classifier__gamma': 'scale', 'classifier__kernel': 'linear'}\n",
+            "Acurácia com melhores parâmetros: 0.9998\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "A acurácia subiu para 0.9998 utilizando 'classifier__C': 0.1, 'classifier__gamma': 'scale' e 'classifier__kernel': 'linear'."
+      ],
+      "metadata": {
+        "id": "CNwxLZSj5yqZ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Avaliação e comparação de resultados\n",
+        "\n",
+        "|algoritmo| acurácia inicial | acurácia pós otimização |\n",
+        "|---|---|---|\n",
+        "|KNN |  0.9988| 1.0000|\n",
+        "|DecisionTree | 1.0000| 0.9987 |\n",
+        "|NaiveBayes | 0.9512|0.8375 |\n",
+        "|SVM | 0.9988|  0.9998 |\n",
+        "\n",
+        "Todos os algoritmos conseguiram performance bem alta.\n",
+        "\n",
+        "- O algoritmo KNN conseguiu alcancar 100% de acurácia após otimização.\n",
+        "\n",
+        "- O algoritmo Árvore de Classificação iniciou com 100% de acurácia, mas depois caiu pra 99,87% indicando que o modelo original poderia estar overfittado.\n",
+        "\n",
+        "- O algoritmo Naive Bayes foi o que teve pior desempenho, piorando mais ainda depois da otimização.\n",
+        "\n",
+        "- O algoritmo SVM teve ótimo resultado e aumentou acurária após otimização.\n",
+        "\n",
+        "Dessa forma o KNN otimizado será o escolhido para exportação."
+      ],
+      "metadata": {
+        "id": "j2E5EnuR6PZZ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 6. Exportação do modelo treinado\n",
+        "\n",
+        "Após a execução desta célula o arquivo aparecerá na raiz da pasta."
+      ],
+      "metadata": {
+        "id": "1u5jHioZBPjy"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import joblib\n",
+        "\n",
+        "# pipeline treinado com os melhores parâmetros\n",
+        "modelo_final = grid_knn.best_estimator_\n",
+        "\n",
+        "# salvar o modelo\n",
+        "joblib.dump(modelo_final, 'modelo_knn_cogumelos.pkl')\n",
+        "\n",
+        "# depois, para carregar:\n",
+        "# modelo_carregado = joblib.load('modelo_knn_cogumelos.pkl')"
+      ],
+      "metadata": {
+        "id": "ZEFibCUXBOAZ",
+        "outputId": "651578ff-a7b7-45f8-8728-f3df2a816d87",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['modelo_knn_cogumelos.pkl']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 42
+        }
+      ]
     }
   ]
 }
